# rubiks-cracker

./: CMakeLists.txt
src/: rubiks-cracker.cpp  rubiks.cpp  rubiks.h  solver.cpp  solver.h
